After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680076 - Fail to join password protected room
Fail to join password protected room
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Multi User Chat
2.33.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2012-07-17 09:14 UTC by Guillaume Desmottes
Modified: 2012-07-17 09:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
tp-chat:requires TP_CHANNEL_FEATURE_PASSWORD (1.29 KB, patch)
2012-07-17 09:18 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2012-07-17 09:14:45 UTC
I can't join a password protected room using master.
Comment 1 Guillaume Desmottes 2012-07-17 09:18:29 UTC
Created attachment 218998 [details] [review]
tp-chat:requires TP_CHANNEL_FEATURE_PASSWORD

check_almost_ready() relies on the password feature to be prepared so we
should make sure that tp-glib prepares it for us before starting to prepare
our own feature.
Comment 2 Guillaume Desmottes 2012-07-17 09:20:46 UTC
Attachment 218998 [details] pushed as 33ad5c3 - tp-chat:requires TP_CHANNEL_FEATURE_PASSWORD