tp-chat:requires TP_CHANNEL_FEATURE_PASSWORD

check_almost_ready() relies on the password feature to be prepared so we
should make sure that tp-glib prepares it for us before starting to prepare
our own feature.

https://bugzilla.gnome.org/show_bug.cgi?id=680076